<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@drawable/flat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/flat"
        android:fitsSystemWindows="false"
        android:gravity="center"
        android:orientation="vertical">

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="430dp"-->
        <!--            android:fitsSystemWindows="false"-->
        <!--            android:background="@drawable/flat"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin_2x"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"

            android:textStyle="bold" />

        <!--        <ImageView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_weight="10"-->
        <!--            android:src="@drawable/flat" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:layout_margin="@dimen/standard_margin"
                android:background="@drawable/edit_text_style"
                android:hint="@string/username"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/edit_text_size" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:layout_margin="@dimen/standard_margin"
                android:background="@drawable/edit_text_style"
                android:hint="@string/password"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"

                android:textSize="@dimen/edit_text_size" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/red"
                android:text="@string/login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account"
                android:textColor="@color/grey"></TextView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>